--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "extensions": [".js", ".jsx"] }],
         "react/react-in-jsx-scope": "off",
         "react/jsx-indent": "off",
-        "linebreak-style":"off"
+        "linebreak-style":"off",
+        "indent":"off"
     }
 }
